--- a/android/build.gradle
+++ b/android/build.gradle
@@ -25,6 +25,7 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
 android {
+    namespace 'com.crisp_chat_sdk'
     compileSdkVersion 33
 
     compileOptions {
@@ -48,6 +49,6 @@ android {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'im.crisp:crisp-sdk:1.+'
+    implementation 'im.crisp:crisp-sdk:2.0.5'
     implementation 'androidx.multidex:multidex:2.0.1'
 }
